--- a/web_ui/admin_panel/admin_home.html
+++ b/web_ui/admin_panel/admin_home.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - Product Approval Queue</title>
-    <link rel="stylesheet" href="../seller_panel/css/style.css">
-    <style>
-        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-        th { background-color: #f2f2f2; }
-        .approve-btn { background-color: #4caf50; color: white; border: none; padding: 5px 10px; cursor: pointer; }
-        .reject-btn { background-color: #f44336; color: white; border: none; padding: 5px 10px; cursor: pointer; margin-left: 5px; }
-    </style>
+    <link rel="stylesheet" href="../admin_panel/css/admin_home.css">
+
 </head>
 <body>
+    <nav class="top-menu pixel-text">
+        <div class="logo">ADMIN PANEL</div>
+        <ul>
+            <li><a href="#" onclick="logout()" class="logout">ออกจากระบบ</a></li>
+        </ul>
+    </nav>
+    
     <div class="container" id="admin-dashboard" style="width: 90%; max-width: 1200px;">
         <h2>Product Approval Queue</h2>
         <p>Welcome, Admin! Total pending products: <span id="pendingCount">0</span></p>
