--- a/web_ui/seller_panel/index.html
+++ b/web_ui/seller_panel/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seller Panel Login</title>
-    <link rel="stylesheet" href="css/styly.css">
+    <link rel="stylesheet" href="../seller_panel/css/index.css">
 </head>
 <body>
     <div class="container" id="login-form">
-        <h2>Seller Login</h2>
+        <h2>เข้าสู่ระบบร้านค้า</h2>
         <form id="loginForm">
-            <label for="loginUsername">Username:</label>
+            <label for="loginUsername">ชื่อผู้ใช้:</label>
             <input type="text" id="loginUsername" required>
             
-            <label for="loginPassword">Password:</label>
+            <label for="loginPassword">รหัสผ่าน:</label>
             <input type="password" id="loginPassword" required>
             
-            <button type="submit">Log In</button>
+            <button type="submit">เข้าสู่ระบบ</button>
             <div id="loginMessage" class="message"></div>
         </form>
         <p style="text-align: center; margin-top: 20px;">
-            <a href="register.html">Don't have an account? Register Shop</a>
+            <a href="register.html">ยังไม่มีบัญชี? สมัครร้านค้า</a>
         </p>
     </div>
 
