--- a/web_ui/seller_panel/register.html
+++ b/web_ui/seller_panel/register.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seller Registration</title>
-
+    <link rel="stylesheet" href="../seller_panel/css/register.css">
 </head>
 <body>
     <div class="container" id="register-form">
-        <h2>Register New Shop</h2>
+        <h2>สมัครสมาชิกร้านค้า</h2>
         <form id="registerForm">
-            <label for="regShopName">Shop Name:</label>
+            <label for="regShopName">ชื่อร้าน:</label>
             <input type="text" id="regShopName" required>
 
-            <label for="regAddress">Address:</label>
+            <label for="regAddress">ที่อยู่:</label>
             <input type="text" id="regAddress" required>
 
-            <label for="regUsername">Username:</label>
+            <label for="regUsername">ชื่อผู้ใช้:</label>
             <input type="text" id="regUsername" required>
             
-            <label for="regEmail">Email:</label>
+            <label for="regEmail">อีเมล:</label>
             <input type="text" id="regEmail" required>
 
-            <label for="regPassword">Password:</label>
+            <label for="regPassword">รหัสผ่าน:</label>
             <input type="password" id="regPassword" required>
             
-            <button type="submit">Register</button>
+            <button type="submit">สมัครร้านค้า</button>
             <div id="registerMessage" class="message"></div>
         </form>
         <p style="text-align: center; margin-top: 20px;">
-            <a href="index.html">Back to Login</a>
+            <a href="index.html">กลับไปที่หน้าเข้าสู่ระบบ</a>
         </p>
     </div>
     <script src="js/auth.js"></script>
