--- a/web_ui/admin_panel/index.html
+++ b/web_ui/admin_panel/index.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
-    <link rel="stylesheet" href="../seller_panel/css/style.css">
+    <link rel="stylesheet" href="../admin_panel/css/index.css">
 </head>
 <body>
-    <div class="container" id="admin-login-form" style="width: 300px;">
-        <h2>Admin Login</h2>
+    <div class="container admin-login" style="width: 320px;">
+        <h2 class="pixel-text">Admin Login</h2>
+
         <form id="loginForm">
-            <label for="loginUsername">Username:</label>
-            <input type="text" id="loginUsername" value="admin" required>
-            <label for="loginPassword">password:</label>
-            <input type="password" id="loginPassword" value="password" required>
-            <button type="submit">Log In</button>
+            <div class="form-group">
+                <label>Username</label>
+                <input type="text" id="loginUsername" value="admin" required>
+            </div>
+
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" id="loginPassword" value="password" required>
+            </div>
+
+            <button type="submit">LOG IN</button>
+
             <div id="loginMessage" class="message"></div>
         </form>
     </div>
+
 
     <script src="js/admin.js"></script>
         <script>
