--- a/web_ui/admin_panel/admin_product_detail.html
+++ b/web_ui/admin_panel/admin_product_detail.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin - Product Review</title>
     <link rel="stylesheet" href="../admin_panel/css/admin_product_detail.css">
     
@@ -64,7 +65,7 @@
             <button type="button" onclick="handleApproval(document.getElementById('detailProductId').textContent, 'rejected')" style="background-color: red;">Reject Product</button>
         </form>
 
-        <a href="admin_home.html">Back to Queue</a> | <button onclick="logout()">Log Out</button>
+        <a href="admin_home.html">Back to Queue</a> 
     </div>
 
     <script src="js/admin.js"></script>
