--- a/web_ui/seller_panel/register.html
+++ b/web_ui/seller_panel/register.html
@@ -29,7 +29,7 @@
             <div id="registerMessage" class="message"></div>
         </form>
         <p style="text-align: center; margin-top: 20px;">
-            <a href="index.html">กลับไปที่หน้าเข้าสู่ระบบ</a>
+            <a href="index.html" class="back-links">กลับไปที่หน้าเข้าสู่ระบบ</a>
         </p>
     </div>
     <script src="js/auth.js"></script>
