--- a/web_ui/seller_panel/products.html
+++ b/web_ui/seller_panel/products.html
@@ -40,7 +40,9 @@
         <a href="dashboard.html">Back to Dashboard</a> | <a href="#" onclick="logout()">Log Out</a>
     </div>
 
+    <script src="js/auth.js"></script>
     <script src="js/main.js"></script>
+
     <script>
         //เรียกใช้ฟังก์ชันดึงข้อมูลสินค้าเมื่อหน้าโหลดเสร็จ
         window.onload = function() {
